<?xml version="1.0" encoding="utf-8"?>
<layout >

    <data>
        <variable
            name="isLoading"
            type="boolean" />
    </data>

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/item_horizontal_margin"
            android:layout_marginEnd="@dimen/item_horizontal_margin"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/products_search_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/search_subreddit_hint"/>

            <ImageButton
                android:id="@+id/products_search_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/white_rounded_btn"
                android:contentDescription="@string/cd_subreddit_search"
                app:srcCompat="@drawable/ic_search"/>

        </LinearLayout>

        <TextView
            android:id="@+id/loading_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/loading_posts"
            android:textAlignment="center"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/products_list"
            android:contentDescription="@string/cd_post_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="LinearLayoutManager"/>

    </LinearLayout>
</layout>