<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/search_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/search_edit_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:autofillHints="@string/autofill_hint"
            android:hint="@string/search"
            android:inputType="textAutoComplete"
            android:padding="8dp"
            android:textAlignment="viewStart"
            android:textColorHint="@color/grey"
            android:textSize="20sp" />

        <Button
            android:id="@+id/save"
            android:background="@drawable/white_square_btn"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="6dp"
            android:src="@drawable/ic_search"
            android:textAllCaps="false"
            android:text="@string/add_tolist" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_feed"
            android:id="@+id/create_feed"
            android:background="@drawable/white_square_btn"/>
        <TextView
            android:id="@+id/sub_connection_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:gravity="center"
            android:hint="@string/connection"
            android:textSize="15sp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/sub_swipe_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:contextClickable="true"
            android:visibility="visible">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/sub_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="8dp"
                    android:importantForAccessibility="yes"
                    android:scrollbars="vertical"
                    tools:listitem="@layout/layout_subreddit_item" />
            </androidx.core.widget.NestedScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>
</LinearLayout>