<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/grey"
    android:fillViewport="true">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/ic_close"
                    android:layout_alignParentStart="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/close_rounded_btn"
                    android:contentDescription="@string/option_icon"
                    android:padding="4dp"
                    android:src="@drawable/ic_close" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/post_container_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/post_subreddit_detail"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/r_subreddit"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/post_author_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textStyle="italic"
                    android:hint="@string/endpoint_user_author"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/post_title_view_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="8dp"
                android:text="@string/post_title"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/post_text_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="3"
                android:padding="8dp"
                android:text="@string/post_body_ipsum"
                android:textAlignment="viewStart"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/post_thumbnail_detail"
                android:background="@color/grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/imageUrl"
                android:scaleType="centerCrop"
                android:src="@drawable/theotter"
                android:visibility="visible"
                app:layout_collapseMode="pin" />

            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/post_video_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="16dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/imageUrl"
                android:maxHeight="200dp"
                android:minHeight="80dp"
                android:src="@drawable/theotter"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
